# compression-algs

./: .gitignore  .gitmodules  BinaryDump.java  CMakeLists.txt  Huffman.cpp  Huffman.java  LICENSE  Makefile  README.md  compression-algs-config.cmake  index.html  makefile
bitheader/: bitstream.hpp
bitsrc/: bitstream.cpp
cxxopts/: cxxopts.hpp
huffmanHeader/: AdaptiveHuffman.hpp  Compression.hpp  Huffman.hpp
huffmanSrc/: AdaptiveHuffman.cpp  Huffman.cpp
include/: AdaptiveHuffman.hpp  Compression.hpp  Huffman.hpp  compression-algs.hpp
index-src/: index-src.mdk
interface/: CMakeLists.txt  interface.cpp  server.cpp
qheader/: Queue.hpp
src/: AdaptiveHuffman.cpp  CMakeLists.txt  Huffman.cpp
test/: test.cpp
