CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT(compression-algs)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

INCLUDE_DIRECTORIES(cxxopts/src)

ADD_SUBDIRECTORY(PriorityQueue)
INCLUDE_DIRECTORIES(${PRIORITYQUEUE_INCLUDE_DIRS})

ADD_SUBDIRECTORY(bitstream)
INCLUDE_DIRECTORIES(${BITSTREAM_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${SERVER_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(bitstream/json/src)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

SET(COMPRESSION_ALGS_LIBRARIES compression-algs CACHE INTERNAL "")
SET(COMPRESSION_ALGS_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE INTERNAL "")


ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(interface)