CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT(compression-algs)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_BUILD_TYPE Release)
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -W -Wextra -O0 -ggdb3")

ADD_SUBDIRECTORY(PriorityQueue)
ADD_SUBDIRECTORY(bitstream)

SET(COMPRESSION_ALGS_LIBRARIES compression-algs CACHE INTERNAL "")
SET(COMPRESSION_ALGS_INCLUDE_DIRS 
	${CMAKE_CURRENT_SOURCE_DIR}/include
	${CMAKE_CURRENT_SOURCE_DIR}/cxxopts/src
	${PRIORITYQUEUE_INCLUDE_DIRS}
	${BITSTREAM_INCLUDE_DIRS}
CACHE INTERNAL "")
INCLUDE_DIRECTORIES(${COMPRESSION_ALGS_INCLUDE_DIRS})
MESSAGE(STATUS "COMPRESSION_ALGS_INCLUDE_DIRS:${COMPRESSION_ALGS_INCLUDE_DIRS}")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(interface)


