INCLUDE_DIRECTORIES(${COMPRESSION_ALGS_INCLUDE_DIRS})

ADD_EXECUTABLE(interface interface.cpp)
TARGET_LINK_LIBRARIES(interface ${COMPRESSION_ALGS_LIBRARIES})

ADD_EXECUTABLE(RecvServer server.cpp)
TARGET_LINK_LIBRARIES(RecvServer ${COMPRESSION_ALGS_LIBRARIES} pthread)

IF(${CMAKE_BUILD_TYPE} MATCHES "release")
	SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-O2")
ELSE()
	SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall -W -Wextra -O0 -ggdb3")
ENDIF()