INCLUDE_DIRECTORIES(${COMPRESSION_ALGS_INCLUDE_DIRS})
ADD_LIBRARY(${COMPRESSION_ALGS_LIBRARIES} Huffman.cpp AdaptiveHuffman.cpp)
TARGET_LINK_LIBRARIES(${COMPRESSION_ALGS_LIBRARIES} ${BITSTREAM_LIBRARIES})

IF(${CMAKE_BUILD_TYPE} MATCHES "release")
	SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-O2")
ELSE()
	SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall -W -Wextra -O0 -ggdb3")
ENDIF()